--- a/views/index.mustache
+++ b/views/index.mustache
@@ -11,25 +11,13 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
-
-    <!-- Bootstrap core CSS     -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- Animation library for notifications   -->
-    <link href="/css/animate.min.css" rel="stylesheet"/>
-
-    <!--  Paper Dashboard core CSS    -->
-    <link href="/css/paper-dashboard.css" rel="stylesheet"/>
-
-
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="/css/demo.css" rel="stylesheet" />
+    <link href="/dist/css/style.min.css" rel="stylesheet" />
 
 
     <!--  Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="/css/themify-icons.css" rel="stylesheet">
+    <link href="/css/themify-icons.css" rel="stylesheet" >
 
 </head>
 <body>
@@ -365,13 +353,7 @@
 </body>
 
     
-    <script src="/js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="/js/bootstrap-checkbox-radio.js"></script>
-	<script src="/js/chartist.min.js"></script>
-    <script src="/js/bootstrap-notify.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
-	<script src="/js/demo.js"></script>
+    <script src="/dist/js/vendor.min.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
     	$(document).ready(function(){
