add user to turbo backend using turbo sdk

--- a/views/auth.mustache
+++ b/views/auth.mustache
@@ -19,9 +19,10 @@
     <link href="/css/themify-icons.css" rel="stylesheet">
 
 </head>
-<body>
-  <div class="row">
-    <div class="container">
+<body style="background:#f9f9f9">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
         <h2>Join Garage Sale</h2>
         <form action="/auth/register" method="post"> 
             <input type="text" name="email" placeholder="Email" class="form-control" /><br />
@@ -30,8 +31,9 @@
             <button class="btn btn-success btn-fill" type="submit">Sign up</button><br />
 
         </form>
+      </div>
     </div>
-  </div>
+  </div>  
 
 </body>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC44mPpaMNvENXryYjHBHzjST1UMnYlARk"></script>
